Edited and Styled Footer

--- a/index.html
+++ b/index.html
@@ -192,12 +192,8 @@
 
         
 <footer>
-    <h4>Footer</h4>
-        <ul>
-        <li>About Me</li>
-        <li>Contact Me</li>
-        <li>Donate</li>
-        </ul>
+    <p><b>About Me</b></p>
+    <p>This site was published by Tatyanna Cobb. To donate to the food trail, <a href="mailto: williams.tatyanna@gmail.com"><em>email me</em></a>. Thank you for visiting!</p>
 </footer>    
 </main>
     
