Removed the '/' to fix the photo file location for git pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     
 <body>
-    <img id="logo" src="/images/foodWme.png" alt="Food With Me Logo">
+    <img id="logo" src="images/foodWme.png" alt="Food With Me Logo">
 <main> 
     <header>   
         <h1>Hi, I'm Tatyanna Cobb and welcome to my bucket list of taste!</h1>
